# libnbd

./: .editorconfig  .ocamlformat  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  podwrapper.pl.in  run.in  rustfmt.toml
bash-completion/: Makefile.in
copy/: Makefile.in  copy-file-to-qcow2-compressed.sh  copy-sparse-allocated.sh  copy-sparse-no-extents.sh  copy-sparse-request-size.sh  copy-sparse.sh  file-ops.c  main.c  multi-thread-copying.c  nbd-ops.c  nbdcopy.h  pipe-ops.c
debian/: changelog  control  copyright  libnbd-bin.install  libnbd-dev.install  libnbd-ocaml-dev.install  libnbd-ocaml.install  libnbd0.symbols  python3-libnbd.install  rules  watch
docs/: Makefile.am  Makefile.in  Makefile.inc  api-flag-links.pod  api-links.pod  libnbd-release-notes-1.16.pod  libnbd-release-notes-1.18.pod  libnbd-security.pod  libnbd.pod  nbd_add_meta_context.pod  nbd_aio_block_status.pod  nbd_aio_block_status_64.pod  nbd_aio_block_status_filter.pod  nbd_aio_cache.pod  nbd_aio_command_completed.pod  nbd_aio_connect.pod  nbd_aio_connect_command.pod  nbd_aio_connect_socket.pod  nbd_aio_connect_systemd_socket_activation.pod  nbd_aio_connect_tcp.pod  nbd_aio_connect_unix.pod  nbd_aio_connect_uri.pod  nbd_aio_connect_vsock.pod  nbd_aio_disconnect.pod  nbd_aio_flush.pod  nbd_aio_get_direction.pod  nbd_aio_get_fd.pod  nbd_aio_in_flight.pod  nbd_aio_is_closed.pod  nbd_aio_is_connecting.pod  nbd_aio_is_created.pod  nbd_aio_is_dead.pod  nbd_aio_is_negotiating.pod  nbd_aio_is_processing.pod  nbd_aio_is_ready.pod  nbd_aio_notify_read.pod  nbd_aio_notify_write.pod  nbd_aio_opt_abort.pod  nbd_aio_opt_extended_headers.pod  nbd_aio_opt_go.pod  (+121 more)
dump/: Makefile.in  dump.c  nbddump.pod
examples/: Makefile.in  copy-libev.c  glib-main-loop.c  open-qcow2.c  server-flags.c  strict-structured-reads.c
fuse/: Makefile.in  nbdfuse.c  operations.c
fuzzing/: Makefile.in  libnbd-fuzz-wrapper.c
generator/: API.ml  API.mli  C.ml  C.mli  GoLang.ml  Makefile.am  Makefile.in  OCaml.ml  Python.ml  Rust.ml  Rust.mli  RustSys.ml  RustSys.mli  config.ml  config.ml.in  config.mli  generator.ml  state_machine.ml  state_machine_generator.ml  states-connect-socket-activation.c  states-connect.c  states-issue-command.c  states-magic.c  states-newstyle-opt-extended-headers.c  states-newstyle-opt-go.c  states-newstyle-opt-starttls.c  states-newstyle-opt-structured-reply.c  states-newstyle.c  states-oldstyle.c  states-reply-chunk.c  states-reply-simple.c  states-reply.c  states.c  utils.ml  utils.mli
golang/: Makefile.am  Makefile.in  bindings.go  go.mod  libnbd_110_defaults_test.go  libnbd_120_set_non_defaults_test.go  libnbd_220_opt_list_test.go  libnbd_230_opt_info_test.go  libnbd_240_opt_list_meta_test.go  libnbd_245_opt_list_meta_queries_test.go  libnbd_250_opt_set_meta_test.go  libnbd_255_opt_set_meta_queries_test.go  libnbd_405_pread_structured_test.go  libnbd_460_block_status_test.go  libnbd_465_block_status_64_test.go  libnbd_590_aio_copy_test.go  libnbd_620_stats_test.go  run-tests.sh
include/: Makefile.in  libnbd.h
info/: Makefile.in  can.c  info-can.sh  info-list-uris.sh  info-packets.sh  info-uri.sh  list.c  main.c  map.c  nbdinfo.h  nbdinfo.pod  show.c
interop/: Makefile.am  Makefile.in  block-status-64.c  block-status-64.sh  block-status-payload.c  block-status-payload.sh  dirty-bitmap.c  interop.c  list-exports.c  opt-extended-headers.c  opt-extended-headers.sh  structured-read.c
lib/: Makefile.am  Makefile.in  aio.c  api.c  crypto.c  disconnect.c  flags.c  handle.c  internal.h  libnbd.syms  nbd-protocol.h  opt.c  rw.c  states-run.c  states.c  states.h  test-fork-safe-execvpe.sh  unlocked.h  uri.c  utils.c
ocaml/: Makefile.in  NBD.ml  NBD.mli  handle.c  helpers.c  nbd-c.c  nbd-c.h
python/: Makefile.in  handle.c  libnbdmod.c  methods.c  methods.h  nbd.py  utils.c
rust/: Cargo.toml  Makefile.am  Makefile.in  libnbd-rust.pod  run-tests.sh.in
rust/cargo_test/: Cargo.toml  README.md
rust/cargo_test/src/: lib.rs
rust/examples/: concurrent-read-write.rs  connect-command.rs  fetch-first-sector.rs  get-size.rs
rust/libnbd-sys/: Cargo.toml  build.rs
rust/libnbd-sys/src/: generated.rs  lib.rs
rust/src/: async_bindings.rs  async_handle.rs  bindings.rs  error.rs  handle.rs  lib.rs  types.rs  utils.rs
rust/tests/: test_100_handle.rs  test_110_defaults.rs  test_120_set_non_defaults.rs  test_130_private_data.rs  test_140_explicit_close.rs  test_200_connect_command.rs  test_210_opt_abort.rs  test_220_opt_list.rs  test_230_opt_info.rs  test_240_opt_list_meta.rs  test_245_opt_list_meta_queries.rs  test_250_opt_set_meta.rs  test_255_opt_set_meta_queries.rs  test_300_get_size.rs  test_400_pread.rs  test_405_pread_structured.rs  test_410_pwrite.rs  test_460_block_status.rs  test_465_block_status_64.rs  test_620_stats.rs  test_async_100_handle.rs  test_async_200_connect_command.rs  test_async_210_opt_abort.rs  test_async_220_opt_list.rs  test_async_230_opt_info.rs  test_async_240_opt_list_meta.rs  test_async_245_opt_list_meta_queries.rs  test_async_250_opt_set_meta.rs  test_async_255_opt_set_meta_queries.rs  test_async_400_pread.rs  test_async_405_pread_structured.rs  test_async_410_pwrite.rs  test_async_460_block_status.rs  test_async_465_block_status_64.rs  test_async_620_stats.rs
rust/tests/nbdkit_pattern/: mod.rs
rust/tests/test_log/: mod.rs
scripts/: git.orderfile
sh/: Makefile.in  nbdsh.pod
tests/: Makefile.am  Makefile.in  aio-connect-port.c  aio-connect.c  closure-lifetimes.c  connect-uri.c  errors-bad-cookie.c  errors-client-oversize.c  errors-client-unadvertised-cmd.c  errors-client-unaligned.c  errors-client-unknown-flags.c  errors-client-zerosize.c  errors-connect-null.c  errors-connect-twice.c  errors-multiple-disconnects.c  errors-not-negotiating-aio.c  errors-not-negotiating.c  errors-notify-not-blocked.c  errors-pread-structured.c  errors-server-invalid-offset.c  errors-server-oversize.c  errors-server-unadvertised-cmd.c  errors-server-unaligned.c  errors-server-unknown-flags.c  errors-server-zerosize.c  functions.sh.in  newstyle-limited.c  (+15 more)
(+36 files in other folders)
