# nbd client library in userspace
# Copyright Tage Johansson
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA

[workspace]

[workspace.package]
authors = ["Tage Johansson"]
version = "0.1.0"
# Make sure that the values of the edition and rust-version fields in
# rust_test/Cargo.toml matches the values here.
edition = "2021"
rust-version = "1.69"
description = "Rust bindings for libnbd, a client library for controlling block devices over a network."
license = "LGPL-2.1-or-later"
keywords = ["libnbd", "block-device", "network"]
categories = ["api-bindings", "emulators", "virtualization"]

[package]
name = "libnbd"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libnbd-sys = { path = "libnbd-sys" }
bitflags = "2.3.1"
errno = "0.3.1"
os_socketaddr = "0.2.4"
thiserror = "1.0.40"
log = { version = "0.4.19", optional = true }
libc = "0.2.147"
tokio = { optional = true, version = "1.29.1", default-features = false, features = ["rt", "sync", "net"] }
mio = { optional = true, version = "0.8.0" }

[features]
tokio = ["dep:tokio", "dep:mio"]
default = ["log", "tokio"]

[dev-dependencies]
anyhow = "1.0.72"
once_cell = "1.18.0"
pretty-hex = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "min_const_gen"] }
tempfile = "3.6.0"
tokio = { version = "1.29.1", default-features = false, features = ["rt-multi-thread", "macros"] }
